--- a/PageObjectFactories/test-output/old/Default suite/methods.html
+++ b/PageObjectFactories/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bfab8b">  <td>18/12/25 12:38:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightSearchTest.flightSearchTest()[pri:0, instance:com.pol.testcases.FlightSearchTest@76a3e297]">flightSearchTest</td> 
-  <td>main@1684015092</td>   <td></td> </tr>
+<tr bgcolor="bfab8b">  <td>18/12/26 09:13:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.testcases.LoginTest@69b0fd6f]">loginTest</td> 
+  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="bfab8b">  <td>18/12/26 09:13:48</td>   <td>23487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.pol.testcases.LoginTest@69b0fd6f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="bfab8b">  <td>18/12/26 09:13:50</td>   <td>24774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.testcases.LoginTest@69b0fd6f]">loginTest</td> 
+  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="bfab8b">  <td>18/12/26 09:14:13</td>   <td>48156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.pol.testcases.LoginTest@69b0fd6f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="bfab8b">  <td>18/12/26 09:14:14</td>   <td>49380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.pol.testcases.LoginTest@69b0fd6f]">loginTest</td> 
+  <td>main@789219251</td>   <td></td> </tr>
+<tr bgcolor="bfab8b">  <td>18/12/26 09:14:14</td>   <td>49380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.pol.testcases.LoginTest@69b0fd6f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@789219251</td>   <td></td> </tr>
 </table>
